--- a/trunk/Dominio/Dominio.csproj
+++ b/trunk/Dominio/Dominio.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccionCorrectiva.cs" />
     <Compile Include="Frecuencia.cs" />
     <Compile Include="Indicador.cs" />
     <Compile Include="Medicion.cs" />
@@ -98,7 +99,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Mappings\restriccion.hbm.xml" />
+    <EmbeddedResource Include="Mappings\restriccion.hbm.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mappings\accionCorrectiva.hbm.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
