--- a/trunk/Repositorios/Repositorios.csproj
+++ b/trunk/Repositorios/Repositorios.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccionCorrectivaRepository.cs" />
     <Compile Include="IndicadorRepository.cs" />
     <Compile Include="ObjetivoRepository.cs" />
     <Compile Include="PerspectivaRepository.cs" />
