--- a/trunk/Dominio/Dominio.csproj
+++ b/trunk/Dominio/Dominio.csproj
@@ -40,6 +40,9 @@
     <Reference Include="NHibernate">
       <HintPath>..\packages\NHibernate.3.3.2.4000\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
+    <Reference Include="ObjectListView">
+      <HintPath>..\packages\Unofficial.ObjectListView.2.6.0\lib\net20\ObjectListView.dll</HintPath>
+    </Reference>
     <Reference Include="RulesEngine">
       <HintPath>libs\RulesEngine.dll</HintPath>
     </Reference>
