--- a/trunk/Dominio/packages.config
+++ b/trunk/Dominio/packages.config
@@ -3,4 +3,5 @@
   <package id="FluentValidation" version="3.4.6.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net40" />
+  <package id="Unofficial.ObjectListView" version="2.6.0" targetFramework="net40" />
 </packages>
